--- a/bronze/B03_One_Bit.ipynb
+++ b/bronze/B03_One_Bit.ipynb
@@ -112,9 +112,9 @@
     "\n",
     "<i>Remark that 0 and 1 also refer to Boolean values False and True, respectively, and, False is the negation of True, and True is the negation of False.</i>\n",
     "\n",
-    "The third (resp., fourth) operator returns a constant value 0 (resp., 1), whatever the input is.",
+    "The third (resp., fourth) operator returns a constant value 0 (resp., 1), whatever the input is. \n",
     "\n",
-    "You can play and examine classical logic gates on this site:",
+    "You can play and examine classical logic gates on this site: \n",
     "\n",
     "https://logic.ly/demo"
    ]
